<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".presentation.HomeActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityDropdownLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/material_on_surface_stroke"
        app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:endIconTint="@color/white"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="none"
            android:text="@string/choose_your_city"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/date_city_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/cityDropdownLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday_july_22"
            android:textAppearance="@style/dateCityView"  />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marsaw_poland"
            android:textAppearance="@style/dateCityView" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_city_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_weather_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <TextView
            android:id="@+id/humidity_title"
            style="@style/detailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/estimated_title"
            style="@style/detailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimated_title"
            app:layout_constraintStart_toStartOf="@+id/humidity_title"
            app:layout_constraintTop_toBottomOf="@+id/humidity_title" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="@dimen/detail_image_width"
            android:layout_height="@dimen/detail_image_height"
            android:contentDescription="@string/weather_title"
            app:layout_constraintEnd_toEndOf="@+id/weather_title"
            app:layout_constraintStart_toStartOf="@+id/estimated_title"
            app:layout_constraintTop_toBottomOf="@+id/estimated_title"
            app:srcCompat="@drawable/clouds_sun" />

        <TextView
            android:id="@+id/weather_title"
            style="@style/detailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_title"
            app:layout_constraintStart_toStartOf="@+id/estimated_title"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon"/>

        <TextView
            android:id="@+id/pressure_value"
            style="@style/detailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/humidity_title" />

        <TextView
            android:id="@+id/humidity_value"
            style="@style/detailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_value"
            app:layout_constraintEnd_toEndOf="@+id/pressure_value"
            app:layout_constraintTop_toBottomOf="@+id/pressure_value" />

        <TextView
            style="@style/TextAppearance.AppCompat.Display3"
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_28_xb0"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/humidity_value"
            app:layout_constraintTop_toBottomOf="@+id/humidity_value" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_weather_view"/>

    <LinearLayout
        android:id="@+id/forecast_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/list_forecast_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fIcon1"
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="@dimen/forecast_image_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds_sun" />

            <TextView
                android:id="@+id/fDay1"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/fTemperature1"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_28_xb0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/list_forecast_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fIcon2"
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="@dimen/forecast_image_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds_sun" />

            <TextView
                android:id="@+id/fDay2"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/fTemperature2"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_28_xb0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/list_forecast_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fIcon3"
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="@dimen/forecast_image_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds_sun" />

            <TextView
                android:id="@+id/fDay3"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/fTemperature3"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_28_xb0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/list_forecast_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fIcon4"
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="@dimen/forecast_image_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds_sun" />

            <TextView
                android:id="@+id/fDay4"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/fTemperature4"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_28_xb0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/list_forecast_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fIcon5"
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="@dimen/forecast_image_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds_sun" />

            <TextView
                android:id="@+id/fDay5"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/fTemperature5"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_28_xb0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/list_forecast_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fIcon6"
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="@dimen/forecast_image_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds_sun" />

            <TextView
                android:id="@+id/fDay6"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/fTemperature6"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_28_xb0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/list_forecast_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fIcon7"
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="@dimen/forecast_image_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds_sun" />

            <TextView
                android:id="@+id/fDay7"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/fTemperature7"
                style="@style/forecastView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_28_xb0" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnAddCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="#478fed"
            android:drawableEnd="@drawable/ic_baseline_add_24"
            android:text="@string/add_own_town"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="#478fed"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
            android:text="@string/btn_refresh"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>